# mcp-finance-data

./: README.md  pyproject.toml
examples/: basic_usage.py
src/yahoo_finance_mcp/: models.py  server.py
src/yahoo_finance_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_client.py
yf-mcp/: README.md
yf-mcp/examples/: claude_integration.md
yf-mcp/src/yahoo_finance_mcp/: __init__.py  client.py  tools.py
yf-mcp/src/yahoo_finance_mcp.egg-info/: entry_points.txt
