[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yahoo-finance-mcp"
version = "0.1.0"
description = "Yahoo Finance data analysis server (MCP-style)"
authors = [
    {name = "Yutao Ye", email = "leoyeah1111@gmail.com"}
]
requires-python = ">=3.11.5,<3.12"
dependencies = [
    "yfinance>=0.2.18",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "mcp>=0.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "fastmcp"
]

[project.scripts]
yahoo-finance-server = "yahoo_finance_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src" 
